feat: AddOffer
