# webroot/swagger/data/index.yaml
@@ -30,38 +30,27 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MessageResponse'
+    post:
+      tags:
+        - offers
+      summary: 'Добавление оффера'
+      description: 'Добавление оффера'
+      operationId: add-offer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddOffer'
+      responses:
+        '201':
+          description: Принято
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
 components:
   schemas:
-    Location:
-      description: 'Description of Location'
-      properties:
-        country:
-          description: Страна
-          type: string
-        region:
-          description: 'Название субъекта РФ'
-          type:
-            - string
-            - 'null'
-        district:
-          description: 'Название района субъекта РФ'
-          type: string
-        localityName:
-          description: 'Название населенного пункта'
-          type: string
-        subLocalityName:
-          description: 'Район в населенном пункте'
-          type:
-            - string
-            - 'null'
-        address:
-          description: 'Адрес объекта — улица и номер здания'
-          type: string
-        apartment:
-          description: 'Номер квартиры'
-          type: string
-      type: object
-    Offer:
+    AddOffer:
       description: 'Description of Offer'
       properties:
         type:
@@ -114,13 +103,107 @@ components:
           type:
             - string
             - 'null'
-        creationDate:
-          description: 'Дата создания объявления'
-          type: string
         location:
           $ref: '#/components/schemas/Location'
           description: 'Расположение объекта'
       type: object
+    Location:
+      description: 'Description of Location'
+      properties:
+        country:
+          description: Страна
+          type: string
+        region:
+          description: 'Название субъекта РФ'
+          type:
+            - string
+            - 'null'
+        district:
+          description: 'Название района субъекта РФ'
+          type: string
+        localityName:
+          description: 'Название населенного пункта'
+          type: string
+        subLocalityName:
+          description: 'Район в населенном пункте'
+          type:
+            - string
+            - 'null'
+        address:
+          description: 'Адрес объекта — улица и номер здания'
+          type: string
+        apartment:
+          description: 'Номер квартиры'
+          type: string
+      type: object
+    Offer:
+      description: 'Description of Offer'
+      type: object
+      allOf:
+        -
+          $ref: '#/components/schemas/AddOffer'
+        -
+          properties:
+            internalId:
+              description: 'Дата создания объявления'
+              type: string
+            type:
+              description: 'Тип сделки'
+              type: string
+              enum:
+                - продажа
+                - аренда
+            propertyType:
+              description: 'Тип недвижимости'
+              type: string
+              enum:
+                - жилая
+            category:
+              description: 'Категория объекта'
+              type: string
+              enum:
+                - дача
+                - дом
+                - 'дом с участком'
+                - участок
+                - 'часть дома'
+                - квартира
+                - комната
+                - таунхаус
+                - участок
+                - дуплекс
+                - гараж
+            garageType:
+              description: 'Категория гаража'
+              type:
+                - string
+                - 'null'
+              enum:
+                - гараж
+                - машиноместо
+                - бокс
+            lotNumber:
+              description: 'Номер лота'
+              type:
+                - string
+                - 'null'
+            cadastralNumber:
+              description: 'Кадастровый номер объекта недвижимости'
+              type:
+                - string
+                - 'null'
+            url:
+              description: 'URL страницы с объявлением на вашем сайте'
+              type:
+                - string
+                - 'null'
+            creationDate:
+              description: 'Дата создания объявления'
+              type: string
+            location:
+              $ref: '#/components/schemas/Location'
+              description: 'Расположение объекта'
+          type: object
     MessageResponse:
       description: 'Description of MessageResponse'
       properties:
